sp-06 resolve overflow on home page (#6)

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -135,3 +135,9 @@ svg {
   stroke-dashoffset: 100;
   transition: 0.6s ease-out;
 }
+
+@media screen and (max-width: 639px) {
+.emptybar {
+  width: 50%;
+}
+}
