--- a/app/globals.css
+++ b/app/globals.css
@@ -39,18 +39,6 @@
 }
 
 /*
-1. Use a consistent sensible line-height in all browsers.
-2. Prevent adjustments of font size after orientation changes in iOS.
-*/
-
-html {
-  line-height: 1.6875rem;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/*
 1. Remove the margin in all browsers.
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
@@ -66,11 +54,11 @@ body {
   color: rgb(var(--foreground-rgb));
   background: #eeeeee;
   font-size: 1.125rem;
+  line-height: 1.6875rem;
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 .nav {
